--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,118 @@
+@import url('fonts.css');
+
+:root {
+    --primary-background-color  : #2c3e50;
+    --secondary-background-color: #34495e;
+
+    --primary-color  : #ffffff;
+    --secondary-color: #ff7675;
+}
+
 html, body {
     margin: 0;
     padding: 0;
+    background-color: var(--secondary-background-color);
+}
+
+header {
+    display: flex;
+    height: 100px;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--primary-background-color);
+}
+
+header div a {
+    display: inline-flex;
+    text-decoration: none;
+    color: var(--secondary-color);
+    font-size: 32px;
+    font-family: 'Lexend Deca', sans-serif;
+}
+
+header div a p {margin: calc(calc(56px - 32px) / 2);}
+
+header img {
+    width: 56px;
+    height: 56px;
+}
+
+footer {
+    background-color: var(--primary-background-color);
+    color: var(--primary-color);
+    text-align: center;
+    width: 100%;
+    height: auto;
+}
+
+footer p {padding: 16px; font-family: 'Roboto', sans-serif; margin-bottom: 0;}
+footer p a {text-decoration: underline; color: var(--secondary-color);}
+
+#carousel {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#carousel__left-arrow img, #carousel_right-arrow img {width: 72px; cursor: pointer;}
+#carousel__image {width: 60%; height: 60%;}
+
+#carousel__infobox {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    background-color: var(--primary-background-color);
+    border-radius: 8px;
+    margin: 16px 25% auto 25%;
+    
+    color: var(--secondary-color);
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+
+    height: 96px;
+}
+
+#carousel__info-pkmname {height: 24px;}
+#carousel__info-types {height: 60px;}
+
+#carousel__info-types img:nth-child(2) {
+    margin-left: 8px;
+}
+
+#routes-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 16px 0 16px 0;
+}
+
+#routes-container div {
+    flex: 0 0 45%;
+    background-color: var(--primary-background-color);
+    margin: 6px 0 6px 0;
+    padding: 6px;
+    border-radius: 8px;
+
+    display: flex;
+    align-items: center;
+}
+
+#routes-container div img {width: 64px; height: 64px;}
+#routes-container div p {
+    flex: 1 1 auto; 
+    font-family: 'Roboto', sans-serif; 
+    color: var(--primary-color);
+    margin: 12px;
+    text-align: justify;
+}
+#routes-container div p span {color: var(--secondary-color); font-weight: bold;}
+#routes-container div p a {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    padding: 6px;
+    border-radius: 4px;
+    text-decoration: none;
 }
