--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -15,8 +15,8 @@
         <meta property="og:image" content="https://mon-api-pokemon.vercel.app/assets/logo.png" />
         <meta property="og:description" content="Une simple API Pokémon en français." />
 
-        <link rel="stylesheet" type="text/css" href="/assets/style.css" />
-        <link rel="stylesheet" type="text/css" href="/assets/responsive.css" />
+        <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+        <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css" />
     </head>
     <body>
         <header>
