--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -11,7 +11,33 @@
     #routes-container div {
         flex: 0 0 85%;
     }
-    #carousel__infobox {
+    #carousel__infobox, #tryit-container {
         margin: 16px 6.5vw 16px 6.5vw;
+    }
+
+    #tryit-container div {
+        flex-direction: column;
+    }
+
+    #tryit-container div label {
+        text-align: center;
+        border-radius: 8px 8px 0 0;
+    }
+
+    #tryit-container div input {
+        margin: 0;
+        text-align: center;
+        width: auto;
+    }
+
+    #tryit__input-button {
+        border-radius: 0 0 8px 8px;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    #carousel__infobox, #tryit-container, #routes-container div img {
+        display: none;
     }
 }
