--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('fonts.css');
+@import url('animation.css');
 
 :root {
     --primary-background-color  : #2c3e50;
@@ -21,6 +22,7 @@ header {
     justify-content: space-around;
     align-items: center;
     background-color: var(--primary-background-color);
+    margin-bottom: 16px;
 }
 
 header div a {
@@ -57,7 +59,11 @@ footer p a {text-decoration: underline; color: var(--secondary-color);}
 }
 
 #carousel__left-arrow img, #carousel_right-arrow img {width: 72px; cursor: pointer;}
-#carousel__image {width: 60%; height: 60%;}
+#carousel__image, #carousel__loading {width: 60%; height: 60%;}
+
+#carousel__loading {
+    animation: 2s ease-in-out infinite loading;
+}
 
 #carousel__infobox {
     display: flex;
