--- a/templates/views/homepage.jinja
+++ b/templates/views/homepage.jinja
@@ -7,7 +7,8 @@
             <img src="/assets/carousel/chevron_left.svg" draggable="false" style="user-select: none;"/>
         </div>
         <div style="text-align: center;">
-            <img id="carousel__image" src="" />
+            <img id="carousel__image" src="" style="display: none;" />
+            <img id="carousel__loading" src="/assets/carousel/loader.svg" style="" />
         </div>
         <div id="carousel_right-arrow" onclick="setPokemon(actual_pkm + 1);">
             <img src="/assets/carousel/chevron_right.svg" draggable="false" style="user-select: none;" />
@@ -82,6 +83,31 @@
         last_url   = null,
         req_json   = null;
 
+
+    let loader   = document.getElementById("carousel__loading"),
+        image    = document.getElementById("carousel__image"),
+        shiny    = document.getElementById("carousel__shiny"),
+        types    = document.getElementById("carousel__info-types"),
+        pkm_name = document.getElementById("carousel__info-pkmname");
+
+    async function loadImage(url, element) {
+        return new Promise((resolve, reject) => {
+            element.onload  = () => resolve(element);
+            element.onerror = reject;
+            element.src     = url;
+        });
+    }
+
+    async function changeCarouselImage(url, element) {
+        element.style.display = "none";
+        loader.style.display  = "inline";
+
+        await loadImage(url, element);
+
+        loader.style.display  = "none";
+        element.style.display = "inline";
+    }
+
     async function apiRequest(routes) {
         let response = await fetch(base_url + routes);
         return response.redirected ? null : await response.json()
@@ -89,13 +115,13 @@
 
     async function setShiny(number) {
         if(is_shiny) {
-            document.getElementById("carousel__shiny").src   = "/assets/carousel/star_FILL0.svg";
-            document.getElementById("carousel__shiny").title = "Non chromatique";
-            document.getElementById("carousel__image").src   = pkm_data.sprite.regular;
+            shiny.src   = "/assets/carousel/star_FILL0.svg";
+            shiny.title = "Non chromatique";
+            await changeCarouselImage(pkm_data.sprite.regular, image);
         } else {
-            document.getElementById("carousel__shiny").src = "/assets/carousel/star_FILL1.svg";
-            document.getElementById("carousel__shiny").title = "Chromatique";
-            document.getElementById("carousel__image").src = pkm_data.sprite.shiny;
+            shiny.src = "/assets/carousel/star_FILL1.svg";
+            shiny.title = "Chromatique";
+            await changeCarouselImage(pkm_data.sprite.shiny, image);
         }
         is_shiny = !is_shiny;
     }
@@ -106,6 +132,13 @@
         if (number > total_pkm)
             number = 1;
 
+        shiny.style.visibility = "hidden";
+        shiny.src = "/assets/carousel/star_FILL0.svg";
+        is_shiny = false;
+
+        types.innerHTML = "";
+        pkm_name.textContent = "Chargement...";
+
         pkm_data   = await apiRequest("/pokemon/" + number);
         actual_pkm = number;
         if(pkm_data == null) {
@@ -113,14 +146,11 @@
             return;
         }
 
-        document.getElementById("carousel__image").src = pkm_data.sprite.regular;
-        document.getElementById("carousel__info-pkmname").textContent = pkm_data.name.fr;
+        await changeCarouselImage(pkm_data.sprite.regular, image);
+        
+        pkm_name.textContent = pkm_data.name.fr;
+        shiny.style.visibility  = "visible";
 
-        document.getElementById("carousel__shiny").src = "/assets/carousel/star_FILL0.svg";
-        is_shiny = false;
-
-        let types = document.getElementById("carousel__info-types");
-        types.innerHTML = "";
         for(let i = 0; i < pkm_data.types.length; i++) {
             types.innerHTML += `<img src="${pkm_data.types[i].image}" title="${pkm_data.types[i].name}" />`;
         }
