--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -38,7 +38,7 @@
             {% endblock %}
         </main>
         <footer>
-            <p>{{ date.year }} | <a href="https://github.com/Yarkis01/PokeAPI/blob/main/LICENSE" target="_blank">Mit License</a> | Une simple API crée avec ❤️ par <a href="https://github.com/Yarkis01" target="_blank">Yarkis</a></p>
+            <p>{{ date.year }} | <a href="https://github.com/Yarkis01/PokeAPI/blob/main/LICENSE" target="_blank">Mit License</a> | Une simple API crée avec ❤️ par <a href="https://github.com/Yarkis01" target="_blank">Yarkis</a> & <a href="https://github.com/Ashzuu" target="_blank">Ashzuu</a></p>
         </footer>
     {% block javascript %}
     {% endblock %}
