--- a/templates/views/homepage.jinja
+++ b/templates/views/homepage.jinja
@@ -23,7 +23,7 @@
 
 <section id="routes-container">
     <div>
-        <img src="{{ base_url }}assets/sprites/1/regular.png" />
+        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/1/regular.png" />
         <p>
             <span>/api/v1/pokemon/&lt;identifiant&gt;</span><br /><br />
             Permet de récupérer la fiche d'un Pokémon grâce à son identifiant dans le Pokédex National<br /><br />
@@ -31,7 +31,7 @@
         </p>
     </div>
     <div>
-        <img src="{{ base_url }}assets/sprites/4/regular.png" />
+        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/4/regular.png" />
         <p>
             <span>/api/v1/pokemon/&lt;nom&gt;</span><br /><br />
             Permet de récupérer la fiche d'un Pokémon grâce à son nom (français ou anglais)<br /><br />
@@ -39,7 +39,7 @@
         </p>
     </div>
     <div>
-        <img src="{{ base_url }}assets/sprites/7/regular.png" />
+        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/25/regular.png" />
         <p>
             <span>/api/v1/gen/&lt;generation&gt;</span><br /><br />
             Permet de récupérer la liste de tous les Pokémon d'une génération voulue<br /><br />
