--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -11,7 +11,7 @@
     #routes-container div {
         flex: 0 0 85%;
     }
-    #carousel__infobox, #tryit-container {
+    #carousel__infobox, #tryit-container, #warnings {
         margin: 16px 6.5vw 16px 6.5vw;
     }
 
