--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,3 +235,32 @@ footer p a {text-decoration: underline; color: var(--secondary-color);}
     color: #CE9178;
     text-decoration: underline;
 }
+
+#warnings {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 16px 2vw 16px 2vw;
+}
+
+.warning__title {
+    margin: 16px 16px 0 16px;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 24px;
+}
+
+.warning__description {
+    margin: 16px;
+    font-family: 'Roboto', sans-serif;
+}
+
+#warnings div {
+    width: 100%;
+    border-radius: 8px;
+}
+
+#warnings div.danger {
+    background-color: #e74c3c;
+    color: var(--primary-color);
+}
