--- a/templates/views/homepage.jinja
+++ b/templates/views/homepage.jinja
@@ -33,7 +33,7 @@
 
 <section id="routes-container">
     <div>
-        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/1/regular.png" />
+        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/4/regular.png" />
         <p>
             <span>/api/v1/pokemon/&lt;identifiant&gt;</span><br /><br />
             Permet de récupérer la fiche d'un Pokémon grâce à son identifiant dans le Pokédex National<br /><br />
@@ -41,7 +41,7 @@
         </p>
     </div>
     <div>
-        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/4/regular.png" />
+        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/246/regular.png" />
         <p>
             <span>/api/v1/pokemon/&lt;nom&gt;</span><br /><br />
             Permet de récupérer la fiche d'un Pokémon grâce à son nom (français ou anglais)<br /><br />
@@ -73,7 +73,7 @@
         <input type="text" placeholder="pokemon/bulbizarre" id="tryit__input-text" />
         <button id="tryit__input-button" onclick="customApiRequest();" draggable="false" >Soumettre</button>
     </div>
-    <p id="tryit__example">Besoin d'un petit coup de pouce ? Essayez <span onclick="tryApiExample('pokemon')">pokemon</span>, <span onclick="tryApiExample('pokemon/bulbizarre')">pokemon/bulbizarre</span>, ou <span onclick="tryApiExample('gen/1')">gen/1</span></p>
+    <p id="tryit__example">Besoin d'un petit coup de pouce ? Essayez <span onclick="tryApiExample('pokemon')">pokemon</span>, <span onclick="tryApiExample('pokemon/tyranocif')">pokemon/tyranocif</span>, ou <span onclick="tryApiExample('gen/1')">gen/1</span></p>
     <pre id="tryit__json-area">
         <img src="/assets/carousel/loader.svg" />
     </pre>
@@ -126,6 +126,10 @@
     }
 
     async function setShiny(number) {
+        if(pkm_data.sprites.shiny == null) {
+            return;
+        }
+
         if(is_shiny) {
             shiny.src   = "/assets/carousel/star_FILL0.svg";
             shiny.title = "Non chromatique";
@@ -146,6 +150,9 @@
 
         shiny.style.visibility = "hidden";
         shiny.src = "/assets/carousel/star_FILL0.svg";
+        shiny.title = "Non chromatique";
+        shiny.style.cursor = "pointer";
+        shiny.style.filter = "";
         is_shiny = false;
 
         types.style.visibility = "hidden";
@@ -156,6 +163,12 @@
         if(pkm_data == null) {
             document.getElementById("carousel-container").style.display = "none";
             return;
+        }
+
+        if(pkm_data.sprites.shiny == null) {
+            shiny.title = "Shiny Lock";
+            shiny.style.cursor = "not-allowed";
+            shiny.style.filter = "invert(53%) sepia(0%) saturate(0%) hue-rotate(350deg) brightness(95%) contrast(89%)";
         }
 
         await changeCarouselImage(pkm_data.sprites.regular, image);
